[package]
name = "astatine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11.3"
bevy_asset_loader = "0.17.0"
bevy_common_assets = "0.7.0"
bevy_ecs_tilemap = "0.11.0"
bevy_egui = "0.21.0"
bevy_hanabi = "0.7.0"
bevy_tileset = "0.8.0"
noise = "0.8.2"
rand = "0.8.5"
